# neural-networks

./: Cargo.toml  all_train_results.json  best_train_config.json
src/: all_train_results.json  best_train_config.json  main.rs
src/callbacks/: debug_callback.rs  early_stopping.rs  mod.rs  plotting_callback.rs
src/data_structures/: matrix.rs  matrix_tests.rs  mod.rs
src/grid_search/: minst_config.rs  mod.rs  train_config.rs
src/layers/: dense.rs  mod.rs  relu.rs  softmax.rs
src/layers/optimizers/: adagrad.rs  adam.rs  mod.rs
src/networks/: network.rs
src/testing/: mod.rs  test_net.rs
src/training/: data_load.rs  fashionMNIST.rs  mod.rs  xor.rs
