[package]
name = "neural-networks"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
crossterm = "0.29.0"
csv = "1.4.0"
env_logger = "0.11.8"
indicatif = "0.18.3"
log = "0.4.28"
plotters = "0.3.7"
rand = "0.9.2"
rand_pcg = "0.9.0"
rand_simple = "0.2.39"
ratatui = "0.29.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
